--- a/Shoes.html
+++ b/Shoes.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shoes</title>
     <link rel="stylesheet" href="style/index1.css">
-    <link rel="stylesheet" type="text/css" href="style/reg-login.css">
-    <title>Register Form</title>
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+
 </head>
 
 <body>
@@ -52,41 +54,45 @@
         </div>
     </div>
 
-
     <main>
-        <div class="container1">
-            <form id="loginForm" name="loginForm">
-                <div>
-                    <h1>Register</h1>
-                </div>
-                <div class="form-group1">
-                    <label>Full Name</label>
-                    <input type="text" placeholder="8117-Team" id="username" name="username" class="form-control1">
-                    <span id="usernameValidation" class="errorText"></span>
-                </div>
-                <br>
-                <div class="form-group1">
-                    <label>Email</label>
-                    <input type="email" placeholder="hell0@gmail.com" id="email" name="email" class="form-control1">
-                    <span id="emailValidation" class="errorText"></span>
-                </div>
-                <br>
-                <div class="form-group1">
-                    <label>Password</label>
-                    <input type="password" placeholder="********" id="password" name="password" class="form-control1">
-                    <span id="passwordValidation" class="errorText"></span>
-                </div>
-                <br>
-                <div class="form-group1">
-                    <label>Confirm Password</label>
-                    <input type="password" placeholder="********" id="passwordCheck" name="passwordCheck" class="form-control1">
-                    <span id="passCheckValidation" class="errorText"></span>
-                </div>
-                <br><br>
-                <input type="submit" value="Register" name="btnSubmit" class="btn1">
-                <input type="reset" value="Clear" name="btnClear" class="btn2">
+        <div class="categories ">
 
-            </form>
+            <div class="card ">
+                <img class=" prodSize " src="images/shoes/running-shoes-pair-over-white-background-53785563.jpg" alt=" Male Perfume Pic5 ">
+                <div class=" card-text ">
+                    <p><b>Product Name:</b> Running Shoes</p>
+                    <p><b>Price:</b> $30.00USD</p>
+                    <p><b>Product#</b> 001166</p>
+                </div>
+            </div>
+
+            <div class="card ">
+                <img class=" prodSize " src="images/shoes/shoes-footwear-hiking-shoes-walking-40662.jpeg" alt=" Male Perfume Pic6 ">
+                <div class=" card-text ">
+                    <p><b>Product Name:</b>Walking Hiking</p>
+                    <p><b>Price:</b> $99.99USD</p>
+                    <p><b>Product#</b> 001177</p>
+                </div>
+            </div>
+
+            <div class="card ">
+                <img class=" prodSize " src="images/shoes/sport-shoe-4522842.jpg" alt=" Male Perfume Pic7 ">
+                <div class=" card-text ">
+                    <p><b>Product Name:</b> Sports Fan</p>
+                    <p><b>Price:</b> $14.49USD</p>
+                    <p><b>Product#</b> 001188</p>
+                </div>
+            </div>
+
+            <div class="card ">
+                <img class=" prodSize " src="images/shoes/sport-shoe-9332341.jpg" alt=" Male Perfume Pic8 ">
+                <div class=" card-text ">
+                    <p><b>Product Name:</b> Casual running</p>
+                    <p><b>Price:</b> $25.50USD</p>
+                    <p><b>Product#</b> 001199</p>
+                </div>
+
+            </div>
         </div>
 
         <button class="open-button" id="open-button" onclick="openForm()">CHAT TO AN EXPERT <br> let us know how we can
@@ -105,11 +111,28 @@
         </div>
     </main>
 
-
     <footer>
+        <div class=" subfooter ">
+            <table>
+                <tr class=" title ">
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr class=" story ">
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class=" footer ">
+            <div class=" contact ">Contact Us</div>
+            <div class=" FollowUs ">Follow Us</div>
+        </div>
     </footer>
+
+
+    <script src="script/code.js "></script>
 </body>
-<script src="script/register.js"></script>
-<script src="script/code.js "></script>
+
 
 </html>
