--- a/test.html
+++ b/test.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index1.css">
-    <link rel="stylesheet" type="text/css" href="style/reg-login.css">
-    <title>Register Form</title>
+    <!-- <link rel="stylesheet" type="text/css" href="style/register.css"> -->
+    <link rel="stylesheet" type="text/css" href="style/test.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style/log-in.css"> -->
+    <link rel="JavaScript" type="text/JS" href="script/register.js">
+
+    <title>log in form</title>
 </head>
 
 <body>
@@ -35,9 +39,9 @@
                 </div>
                 <div class="subheader" id="subheader">
                     <ul>
-                        <li class="searchArea1">
-                            <form action="" id="searchForm1">
-                                <input type="search" class="searchInput">
+                        <li class="searchArea">
+                            <form action="" id="searchForm">
+                                <input type="search">
                                 <i class="fa fa-search"></i>
                             </form>
                         </li>
@@ -88,28 +92,24 @@
 
             </form>
         </div>
-
-        <button class="open-button" id="open-button" onclick="openForm()">CHAT TO AN EXPERT <br> let us know how we can
-            help!</button>
-
-        <div class="chat-popup" id="myForm">
-            <form action="/action_page.php" class="form-container">
-                <h1>Chat</h1>
-
-                <label for="msg"><b></b></label>
-                <textarea placeholder="Type message.." name="msg" required></textarea>
-
-                <button type="submit" class="btn">Send</button>
-                <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-            </form>
-        </div>
     </main>
 
+    <button class="open-button" id="open-button" onclick="openForm()">Chat</button>
 
+    <div class="chat-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+            <h1>Chat</h1>
+
+            <label for="msg"><b></b></label>
+            <textarea placeholder="Type message.." name="msg" required></textarea>
+
+            <button type="submit" class="btn">Send</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+    </div>
     <footer>
     </footer>
 </body>
 <script src="script/register.js"></script>
-<script src="script/code.js "></script>
 
 </html>
