--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -28,22 +28,24 @@
                 </div>
                 <div class="header">
                     <ul>
-                        <li class=""><a href="">CLOTHES</a></li>
-                        <li class=""><a href="">SHOES</a></li>
-                        <li class=""><a href="">ACCESSORIES</a></li>
-                        <li class=""><a href="">SALES</a></li>
-                          
+                        <li class=""><a href="clothes.html">CLOTHES</a></li>
+                        <li class=""><a href="Shoes.html">SHOES</a></li>
+                        <li class=""><a href="accessories.html">ACCESSORIES</a></li>
+                        <li class=""><a href="sales.html">SALES</a></li>
+
                     </ul>
                 </div>
                 <div class="subheader" id="subheader">
                     <ul>
-                        <li class="searchArea"><form action="" id="searchForm">
-                            <input type="search">
-                            <i class="fa fa-search"></i>
-                          </form></li>
+                        <li class="searchArea">
+                            <form action="" id="searchForm">
+                                <input type="search">
+                                <i class="fa fa-search"></i>
+                            </form>
+                        </li>
                         <li class="registration"><a href="register">Register</a></li>
                         <li class="logIn"><a href="log">Log In</a></li>
-                        <li class="cart"><a href="cart">Cart</a></li> 
+                        <li class="cart"><a href="cart.html">Cart</a></li>
                     </ul>
 
                 </div>
