--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -194,7 +194,7 @@
 
             </div>
         </div>
-        <div>
+        <div class="thankyou">
             Copyright 2020 © All Rights Reserved | This website is owned by "Namira, Pattol, Tariq, Khadija" | Our
             gratitude to you for all you have done Professor Frank
         </div>
