--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -200,7 +200,9 @@
         </div>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.mjs"></script>
+    <script src="cookies.js"></script>
     <script src="code.js"></script>
 </body>
 
