--- a/register.html
+++ b/register.html
@@ -27,10 +27,8 @@
                         </div>
                         <div class="subheader" id="subheader">
                             <ul>
-                                <li class="registration"><a href="khaproject/index1.html">home</a></li>
-                                <li> <button id="light" type="light" onclick="changemode(light)">Light</button> </li>
-                                <li> <button id="dark" type="dark" onclick="changemode(dark)">Dark</button> </li>
-                            </ul>
+                                <li class="registration"><a href="register.html">Register</a></li>
+                                <li class="logIn"><a href="logIn.html">Log In</a></li>                            </ul>
                         </div>
             
                     </div>        
