--- a/clothes.html
+++ b/clothes.html
@@ -13,45 +13,70 @@
 <body>
     <div class="container">
         <div class="stickyheader">
+
             <div class="banner" id="changeBanner">
                 Free shipping for orders over 100$
             </div>
 
             <div class="mode">
-                <button id="light" type="light" onclick="changemode(light)">Light</button>
-                <button id="dark" type="dark" onclick="changemode(dark)">Dark</button>
+                <div class="smode">
+                    <button id="light" class="light" onclick="changemode(light)">Light</button>
+                    <button id="dark" class="dark" onclick="changemode(dark)">Dark</button>
+                </div>
+
+                <div class="smenu">
+
+                    <a href="register">Register</a>
+                    <a href="log">Log In</a>
+                    <a href="cart">Cart</a>
+                </div>
+
             </div>
 
             <div class="myheader">
 
                 <div class="logo">
-                    <a href="index1.html"><img src="images/logo1 - Copy.png" alt="our Logo" id="logo"></a>
+                    <img src="images/logo1 - Copy.png" alt="our Logo" id="logo">
                 </div>
-                <div class="header">
-                    <ul>
-                        <li class=""><a href="clothes.html">CLOTHES</a></li>
-                        <li class=""><a href="Shoes.html">SHOES</a></li>
-                        <li class=""><a href="accessories.html">ACCESSORIES</a></li>
-                    </ul>
-                </div>
-                <div class="subheader" id="subheader">
-                    <ul>
-                        <li class="searchArea1">
-                            <form action="" id="searchForm1">
-                                <input type="search" class="searchInput">
-                                <i class="fa fa-search"></i>
-                            </form>
-                        </li>
-                        <li class="registration"><a href="register.html">Register</a></li>
-                        <li class="logIn"><a href="logIn.html">Log In</a></li>
-                        <li class="cart"><a href="cart.html">Cart</a></li>
-                    </ul>
 
+                <div class="header">
+
+                    <div class=""> <a href="index1.html">HOME</a></div>
+                    <div class=""><a href="clothes.html">CLOTHES</a></div>
+                    <div class=""><a href="Shoes.html">SHOES</a></div>
+                    <div class=""><a href="accessories.html">ACCESSORIES</a></div>
+
+                </div>
+
+                <div class="searchArea">
+                    <form id="searchForm">
+                        <input type="search" id="searchinput">
+                        <i class="fa fa-search"></i>
+                    </form>
                 </div>
 
             </div>
         </div>
     </div>
+
+
+    <button class="open-button" id="open-button" onclick="openForm()">CHAT TO AN EXPERT <br> let us know how we can
+        help!</button>
+
+    <div class="chat-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
+            <h1>Chat</h1>
+
+            <label for="msg"><b></b></label>
+            <textarea placeholder="Type message.." name="msg" id="msg" required></textarea>
+
+            <button type="submit" class="btn">Send</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+    </div>
+
+
+
     <main>
         <div class="categories">
 
@@ -180,25 +205,91 @@
         </div>
 
     </main>
+   
     <footer>
-        <div class=" subfooter ">
-            <table>
-                <tr class=" title ">
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class=" story ">
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+        <div class="subfooter">
+            <div class="subfoo">
+
+
+                <div class="title">
+
+                    <p> Our Story </p>
+                    <p> Our Vision</p>
+
+                </div>
+                <div class="story">
+                    <p>He ordered his regular breakfast. Two eggs and cheese sandwich, hash browns, and two strips of
+                        bacon. He continued to look at the menu wondering if this would be the day he added something
+                        new. This was also part of the routine. A few seconds of hesitation to see if something else
+                        would be added to the order before demuring and saying that would be all. It was the same exact
+                        meal that he had ordered every day for the past two years. He ordered his regular breakfast. Two
+                        eggs and cheese sandwich, hash browns, and two strips of
+                        bacon. He continued to look at the menu wondering if this would be the day he added something
+                        new. This was also part of the routine. A few seconds of hesitation to see if something else
+                        would be added to the order before demuring and saying that would be all. It was the same exact
+                        meal that he had ordered every day for the past two years.</p>
+                    <p>It wasn't quite yet time to panic. There was still time to salvage the situation. At least that
+                        is what she was telling himself. The reality was that it was time to panic and there wasn't time
+                        to salvage the situation, but he continued to delude himself into believing there was. It wasn't
+                        quite yet time to panic. There was still time to salvage the situation. At least that
+                        is what she was telling himself. The reality was that it was time to panic and there wasn't time
+                        to salvage the situation, but he continued to delude himself into believing there was.</p>
+                </div>
+            </div>
         </div>
-        <div class=" footer ">
-            <div class=" contact ">Contact Us</div>
-            <div class=" FollowUs ">Follow Us</div>
+
+        <div class="bottom">
+            <div class="codepromo">
+                <p>SIGN UP FOR NEWS & GET 10% OFF</p>
+                <div class="codepromo2" id="formindex">
+
+                    <input type="text" id="email" name="email" placeholder="Your Email" required>
+                    <button class="submitemail" onclick="checkin()">@</button>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="foo">
+
+            <div class="boxes">
+
+                <div class="box1">
+                    Customer Services <br>
+                    Privacy Policy<br>
+                    Return Policy<br>
+                    Shipping <br>
+                    Order Tracker
+                </div>
+
+                <div>
+                    <a href="https://www.facebook.com/">Facebook</a> <br>
+                    <a href="https://twitter.com/">Twitter </a><br>
+                    <a href="https://www.instagram.com/">Instagram</a> <br>
+                    <a href="https://www.pinterest.ca/">Pinterest</a> <br>
+                </div>
+
+
+
+                <div class="box2">
+                    Email us: <br>
+                    <a href="mailto:DIY@8117-Team.ca?subject=inquiry%20from%20website">
+                        8117-Team@algonquin.ca</a> <br>
+
+                    Fax :
+                    (613) 000-0000 <br>
+
+                    Phone Number :
+                    (613) 123 4567
+                </div>
+
+            </div>
+        </div>
+        <div class="thankyou">
+            Copyright 2020 © All Rights Reserved | This website is owned by "Namira, Pattol, Tariq, Khadija" | Our
+            gratitude to you for all you have done Professor Frank
         </div>
     </footer>
-
 
     <script src="script/code.js"></script>
 </body>
