update link to log in page

--- a/index1.html
+++ b/index1.html
@@ -27,9 +27,9 @@
 
                 <div class="smenu">
 
-                    <a href="register">Register</a>
-                    <a href="log">Log In</a>
-                    <a href="cart">Cart</a>
+                    <a href="register.html">Register</a>
+                    <a href="logIn.html">Log In</a>
+                    <a href="cart.html">Cart</a>
                 </div>
 
             </div>
