--- a/khaproject/cart.html
+++ b/khaproject/cart.html
@@ -87,58 +87,58 @@
                             <div>
                                 <p>Red Shoes</p>
                                 <small>Price : 50.00$</small></br>
-                                <button id="remove" onclick="myRemove()">Remove</button>
+                                <button id="remove">Remove</button>
                             </div>
                         </div>
                     </td>
-                    <td><input id="q-1" type="number" onclick="inputClick(this)" value="1" min="1"></td>
+                    <td><input id="q-1" type="number " onclick="inputClick(this) " value="1 " min="1 "></td>
                     <td id="p-1">$50.00</td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
-                            <img src="images/shoes/pexels-photo.jpg" alt="accessories1">
+                        <div class="cart-info ">
+                            <img src="images/shoes/pexels-photo.jpg " alt="accessories1 ">
                             <div>
                                 <p>Red Shoes</p>
                                 <small>Price : 50.00$</small></br>
-                                <a href="">Remove</a>
+                                <a href=" ">Remove</a>
                             </div>
                         </div>
                     </td>
 
-                    <td><input id="q-2" type="number" onclick="inputClick(this)" value="1" min="1"></td>
+                    <td><input id="q-2" type="number " onclick="inputClick(this) " value="1 " min="1 "></td>
                     <td id="p-2">$50.00</td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
-                            <img src="images/shoes/pexels-photo.jpg" alt="accessories1">
+                        <div class="cart-info ">
+                            <img src="images/shoes/pexels-photo.jpg " alt="accessories1 ">
                             <div>
                                 <p>Red Shoes</p>
                                 <small>Price : 50.00$</small></br>
-                                <a href="">Remove</a>
+                                <a href=" ">Remove</a>
                             </div>
                         </div>
                     </td>
 
-                    <td><input id="q-3" type="number" onclick="inputClick(this)" value="1" min="1"></td>
+                    <td><input id="q-3" type="number " onclick="inputClick(this) " value="1 " min="1 "></td>
                     <td id="p-3">$50.00</td>
                 </tr>
 
             </table>
-            <div class="total-price">
+            <div class="total-price ">
                 <table>
                     <tr>
                         <td>Subtotal</td>
-                        <td id="sub">200.00$</td>
+                        <td id="sub ">200.00$</td>
                     </tr>
                     <tr>
                         <td>Tax</td>
-                        <td id="tx">35.00$</td>
+                        <td id="tx ">35.00$</td>
                     </tr>
                     <tr>
                         <td>Total</td>
-                        <td id="tot">230.00$</td>
+                        <td id="tot ">230.00$</td>
                     </tr>
                 </table>
             </div>
